--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <!-- <script 
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYG9A3KJN979QqPsCXX_r19OCiYbibLqU&callback=initMap&v=weekly"
+  async></script> -->
 </body>
 </html>
